Version 0.13
    o new argument "stringnum" in function setupfile()
    o the R data frame gains a new attribute "stdyDscr" when importing from DDI
    o bug fix importing from DDI with external .csv file
    o function convert() now recognizes ".zsav" as SPSS input file

Version 0.12
    o exporting to Excel creates new sheets containing metadata information
      about the variables and their values
    o new argument "encoding" in functions convert() and getMetadata()
    o new argument "recode" in function setupfile()
    o new argument "csv" in function convert()
    o fixed varFormat when exporting to DDI
    o convert() now correctly returns a tibble when the input is a DDI codebook,
      and the argument "declared" is deactivated
    o convert to and from SAS transport files
    o metadata is now (also) collected from factor levels, for R data frames
    o converting to SAS automatically creates a catalog file, next to the datafile
    o new function recodeCharcat() to recode character categorical variables to
      numeric categorical variables
    o argument "chartonum" moved from function recodeValues() to function convert()

Version 0.11
    o new argument "xmlns" in function exportDDI(), to allow creating XML files
      using a namespace
    o new argument "..." in function exportDDI(), to accept more incoming options
    o improved setup file to import .csv file into R

Version 0.10
    o new arguments "monolang" and "xmlang" in function exportDDI()
    o removed formal argument "embed" from function convert(), but it is still
      possible to be used via the "..." and automatically passed to exportDDI()
    o more validation checks when converting to DDI Codebook

Version 0.9
    o added the necessary "ddi:codebook:2_5" statement to the xsi:schemaLocation
      in the codebook, to validate the resulting DDI .xml file
    o updated the documentation of function convert() to explain how to use the